# bwa-streaming

./: .gitignore  CMakeLists.txt  Makefile  README.md  bwa-0.7.10-streaming  bwa.c  bwa.h  bwamem.c  bwamem.h  bwamem_pair.c  bwape.c  bwape.h  bwase.c  bwase.h  bwaseqio.c  bwtaln.c  bwtaln.h  bwtalnpe.c  bwtalnpe.h  bwtalnse.c  fastmap.c  filter.c  filter.h  filter_main.c  filter_report_merge.py  kseq.h  main.c  readLine.h
